--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -1426,7 +1426,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1777,6 +1779,89 @@
    "source": [
     "target= df_subsample[['scalar_coupling_constant']]\n",
     "target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "feature_train, feature_test, target_train, target_test= train_test_split(features, target, test_size=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total feature training features:  419233\n",
+      "total feature testing features:  46582\n",
+      "total target training features:  419233\n",
+      "total target testing features:  46582\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('total feature training features: ', len(feature_train))\n",
+    "print('total feature testing features: ', len(feature_test))\n",
+    "print('total target training features: ', len(target_train))\n",
+    "print('total target testing features: ', len(target_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(419233, 14)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(419233, 1)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_train.shape"
    ]
   },
   {
