view importance of select feature

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -1866,6 +1866,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lightgbm"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
