--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -6254,6 +6254,7 @@
     }
    ],
    "source": [
+    "#Contains all feture dataset as determined by lgbm model\n",
     "mse_train = np.sum((target_train - y_hat_train)**2)/len(target_train)\n",
     "mse_test = np.sum((target_test - y_hat_test)**2) / len(target_test)\n",
     "rmse_train=np.sqrt(mse_train)\n",
@@ -6313,39 +6314,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "OLS based features"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "ols_feature= feature_train[['fc', 'pso', 'sd', 'dso']]"
+   ]
   }
  ],
  "metadata": {
