subsample csv code

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -129,6 +129,15 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_subsample.to_csv('/Users/Iffy/Molecular_Properties/molecule_subsample.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
