--- a/RidgeLasso.ipynb
+++ b/RidgeLasso.ipynb
@@ -5692,7 +5692,7 @@
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [
     {
@@ -5994,16 +5994,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1257fea90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x127835cc0>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     },
