fail attempt at all data 500 rf

--- a/NormalizedRegression.ipynb
+++ b/NormalizedRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -1860,7 +1860,7 @@
        "[4658147 rows x 37 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1888,7 +1888,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1909,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1924,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1944,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1953,7 +1953,7 @@
        "MinMaxScaler(copy=True, feature_range=(0, 1))"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1965,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1986,7 +1986,7 @@
        "        0.47675609]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -3710,7 +3710,7 @@
        "[4658147 rows x 36 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3722,7 +3722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -5497,7 +5497,7 @@
        "[4658147 rows x 36 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5620,7 +5620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7805,6 +7805,175 @@
     "testaccuracy= tune1.score(f_test, t_test)\n",
     "testaccuracyuiiuu8hguhb"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RF 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameter2={\n",
+    " 'criterion': ['mse'],\n",
+    " 'max_depth': (4, 6, 8),\n",
+    " 'max_features': ['auto'],\n",
+    " 'min_samples_leaf': [2],\n",
+    " 'min_samples_split': [2],\n",
+    " 'n_estimators': (300, 400, 500),\n",
+    " 'random_state': [1], 'verbose': [0]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv='warn', error_score='raise-deprecating',\n",
+       "             estimator=RandomForestRegressor(bootstrap=True, criterion='mse',\n",
+       "                                             max_depth=None,\n",
+       "                                             max_features='auto',\n",
+       "                                             max_leaf_nodes=None,\n",
+       "                                             min_impurity_decrease=0.0,\n",
+       "                                             min_impurity_split=None,\n",
+       "                                             min_samples_leaf=1,\n",
+       "                                             min_samples_split=2,\n",
+       "                                             min_weight_fraction_leaf=0.0,\n",
+       "                                             n_estimators='warn', n_jobs=None,\n",
+       "                                             oob_score=False, random_state=None,\n",
+       "                                             verbose=0, warm_start=False),\n",
+       "             iid='warn', n_jobs=-1,\n",
+       "             param_grid={'criterion': ['mse'], 'max_depth': (4, 6, 8),\n",
+       "                         'max_features': ['auto'], 'min_samples_leaf': [2],\n",
+       "                         'min_samples_split': [2],\n",
+       "                         'n_estimators': (300, 400, 500), 'random_state': [1],\n",
+       "                         'verbose': [0]},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid2= GridSearchCV(estimator=RandomForestRegressor(), param_grid=parameter2, n_jobs=-1)\n",
+    "grid2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Iffy/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
+      "  warnings.warn(CV_WARNING, FutureWarning)\n",
+      "/Users/Iffy/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_search.py:715: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  self.best_estimator_.fit(X, y, **fit_params)\n"
+     ]
+    }
+   ],
+   "source": [
+    "gridresult2= grid2.fit(f_train, t_train)\n",
+    "gridresult2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gridbestparam2= gridresult2.best_params_\n",
+    "gridbestparam2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gridresult2.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('hello, im done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
