create leakyrelu for different comparison

--- a/SimpleNeuralNetwork.ipynb
+++ b/SimpleNeuralNetwork.ipynb
@@ -8276,7 +8276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "convergence occured at 200 epochs. let's try a different metrics with "
+    "convergence occured at 200 epochs. let's try a different metrics with higher epoch and see what we get"
    ]
   },
   {
